--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "version": "1.0.1",
   "license": "MIT",
   "scripts": {
+    "add-article": "node ./add-article.js",
     "develop": "gatsby develop",
     "develop-host": "gatsby develop --host 192.168.0.112",
     "build": "gatsby build",
@@ -49,6 +50,7 @@
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.6.1",
     "gatsby-plugin-svgr": "^0.2.1",
+    "mkdirp": "^0.5.1",
     "prettier": "^1.10.2",
     "sharp-cli": "^1.6.0",
     "webpack-bundle-analyzer": "^2.10.0"
