--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "gatsby-plugin-google-analytics": "^1.0.13",
     "gatsby-plugin-jss": "^1.5.9",
     "gatsby-plugin-manifest": "^1.0.8",
-    "gatsby-plugin-netlify": "^1.0.8",
+    "gatsby-plugin-netlify": "^1.0.21",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-offline": "^1.0.10",
     "gatsby-plugin-react-helmet": "^2.0.4",
     "gatsby-plugin-sharp": "^1.6.27",
@@ -84,6 +85,7 @@
     "instantsearch.css": "^7.0.0",
     "material-ui": "1.0.0-beta.36",
     "material-ui-icons": "^1.0.0-beta.17",
+    "netlify-cms": "1.9.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-disqus-comments": "^1.1.1",
     "react-facebook": "^4.2.1",
