--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: mateuszmatyszkowicz/xsolve-tech
+  repo: xsolve-pl/xsolve-tech
   branch: feature/netlify-cms
 
 media_folder: static/img
@@ -29,7 +29,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: "Title", name: "title", widget: "string", pattern: ['.{5,}', "Must have at least 5 characters"]}
-      - {label: "Title", name: "subTitle", widget: "string", required: false, pattern: ['.{5,}', "Must have at least 5 characters"]}
+      - {label: "Sub title", name: "subTitle", widget: "string", required: false, pattern: ['.{5,}', "Must have at least 5 characters"]}
       - {label: "Content", name: "body", widget: "markdown", required: false}
       - {label: "Cover", name: "cover", widget: "image"}
       - {label: "Article Tags", name: "tags", widget: "list"}
