Updating dependencies and addjusting code accordingly to newes version of this dependencies

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.6.1",
-    "gatsby-plugin-svgr": "^0.2.1",
+    "gatsby-plugin-svgr": "^1.0.1",
     "mkdirp": "^0.5.1",
     "prettier": "^1.10.2",
     "sharp-cli": "^1.6.0",
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "color": "^3.0.0",
-    "gatsby": "1.9.224",
+    "gatsby": "^1.9.277",
     "gatsby-image": "^1.0.35",
     "gatsby-link": "1.6.39",
     "gatsby-plugin-algolia": "^0.0.3",
@@ -76,7 +76,7 @@
     "gatsby-remark-copy-linked-files": "^1.5.26",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.56",
-    "gatsby-remark-prismjs": "^1.2.14",
+    "gatsby-remark-prismjs": "^2.0.5",
     "gatsby-remark-responsive-iframe": "^1.4.16",
     "gatsby-remark-smartypants": "^1.4.10",
     "gatsby-source-filesystem": "^1.5.14",
@@ -86,6 +86,7 @@
     "material-ui": "1.0.0-beta.36",
     "material-ui-icons": "^1.0.0-beta.17",
     "netlify-cms": "1.1.0",
+    "prismjs": "^1.15.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-disqus-comments": "^1.1.1",
     "react-facebook": "^4.2.1",
