--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.6.1",
-    "gatsby-plugin-svgr": "^1.0.1",
     "mkdirp": "^0.5.1",
     "prettier": "^1.10.2",
     "sharp-cli": "^1.6.0",
@@ -57,7 +56,7 @@
   },
   "dependencies": {
     "color": "^3.0.0",
-    "gatsby": "^1.9.277",
+    "gatsby": "^1.9.274",
     "gatsby-image": "^1.0.35",
     "gatsby-link": "1.6.39",
     "gatsby-plugin-algolia": "^0.0.3",
@@ -68,7 +67,7 @@
     "gatsby-plugin-jss": "^1.5.9",
     "gatsby-plugin-manifest": "^1.0.8",
     "gatsby-plugin-netlify": "^1.0.21",
-    "gatsby-plugin-netlify-cms": "^2.0.1",
+    "gatsby-plugin-netlify-cms": "^1.0.12",
     "gatsby-plugin-offline": "^1.0.10",
     "gatsby-plugin-react-helmet": "^2.0.4",
     "gatsby-plugin-sharp": "^1.6.27",
@@ -82,10 +81,10 @@
     "gatsby-source-filesystem": "^1.5.14",
     "gatsby-transformer-remark": "^1.7.35",
     "gatsby-transformer-sharp": "^1.6.16",
+    "gatsby-plugin-react-svg": "^1.1.1",
     "instantsearch.css": "^7.0.0",
     "material-ui": "1.0.0-beta.36",
     "material-ui-icons": "^1.0.0-beta.17",
-    "netlify-cms": "1.1.0",
     "prismjs": "^1.15.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-disqus-comments": "^1.1.1",
