--- a/package.json
+++ b/package.json
@@ -55,39 +55,44 @@
     "webpack-bundle-analyzer": "^2.10.0"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
+    "@wapps/gatsby-plugin-material-ui": "^1.0.7",
     "color": "^3.0.0",
-    "gatsby": "^1.9.274",
-    "gatsby-image": "^1.0.35",
-    "gatsby-link": "1.6.39",
-    "gatsby-plugin-algolia": "^0.0.3",
-    "gatsby-plugin-catch-links": "^1.0.15",
-    "gatsby-plugin-favicon": "^2.1.1",
-    "gatsby-plugin-feed": "^1.3.21",
-    "gatsby-plugin-google-analytics": "^1.0.13",
-    "gatsby-plugin-jss": "^1.5.9",
-    "gatsby-plugin-manifest": "^1.0.8",
-    "gatsby-plugin-netlify": "^1.0.21",
-    "gatsby-plugin-netlify-cms": "^1.0.12",
-    "gatsby-plugin-offline": "^1.0.10",
-    "gatsby-plugin-react-helmet": "^2.0.4",
-    "gatsby-plugin-sharp": "^1.6.27",
-    "gatsby-plugin-sitemap": "^1.2.13",
-    "gatsby-remark-copy-linked-files": "^1.5.26",
+    "gatsby": "^2.0.17",
+    "gatsby-image": "^2.0.13",
+    "gatsby-plugin-algolia": "^0.2.0",
+    "gatsby-plugin-catch-links": "^2.0.3",
+    "gatsby-plugin-favicon": "^3.1.4",
+    "gatsby-plugin-feed": "^2.0.6",
+    "gatsby-plugin-google-analytics": "^2.0.6",
+    "gatsby-plugin-jss": "^2.0.2",
+    "gatsby-plugin-manifest": "^2.0.4",
+    "gatsby-plugin-netlify": "^2.0.1",
+    "gatsby-plugin-netlify-cms": "^3.0.3",
+    "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-react-svg": "^2.0.0",
+    "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-plugin-sitemap": "^2.0.1",
+    "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^1.5.56",
-    "gatsby-remark-prismjs": "^2.0.5",
-    "gatsby-remark-responsive-iframe": "^1.4.16",
-    "gatsby-remark-smartypants": "^1.4.10",
-    "gatsby-source-filesystem": "^1.5.14",
-    "gatsby-transformer-remark": "^1.7.35",
-    "gatsby-transformer-sharp": "^1.6.16",
-    "gatsby-plugin-react-svg": "^1.1.1",
+    "gatsby-remark-images": "^2.0.3",
+    "gatsby-remark-prismjs": "^3.0.1",
+    "gatsby-remark-responsive-iframe": "^2.0.5",
+    "gatsby-remark-smartypants": "^2.0.5",
+    "gatsby-source-filesystem": "^2.0.1",
+    "gatsby-transformer-remark": "^2.1.6",
+    "gatsby-transformer-sharp": "^2.1.3",
     "instantsearch.css": "^7.0.0",
     "material-ui": "1.0.0-beta.36",
     "material-ui-icons": "^1.0.0-beta.17",
+    "netlify-cms": "^2.1.2",
     "prismjs": "^1.15.0",
+    "react": "^16.5.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-disqus-comments": "^1.1.1",
+    "react-dom": "^16.5.2",
+    "react-event-listener": "^0.6.4",
     "react-facebook": "^4.2.1",
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.1.3",
