--- a/package.json
+++ b/package.json
@@ -37,25 +37,26 @@
     "generate-app-icons": "yarn favIcon16 && yarn favIcon32 && yarn favIcon96 && yarn icon512 && yarn icon384 && yarn icon256 && yarn icon192 && yarn icon144 && yarn icon96 && yarn icon48 && yarn appleIcon180 && yarn appleIcon152 && yarn appleIcon144 && yarn appleIcon120 && yarn appleIcon114 && yarn appleIcon76 && yarn appleIcon72 && yarn appleIcon60 && yarn appleIcon57"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^10.0.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "dotenv": "^5.0.0",
+    "dotenv": "^6.0.0",
     "eslint": "^4.17.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-graphql": "^1.5.0",
+    "eslint-config-google": "^0.10.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.5.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.6.1",
     "mkdirp": "^0.5.1",
     "prettier": "^1.10.2",
     "sharp-cli": "^1.6.0",
-    "webpack-bundle-analyzer": "^2.10.0"
+    "webpack-bundle-analyzer": "^3.0.2"
   },
   "dependencies": {
     "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
     "@wapps/gatsby-plugin-material-ui": "^1.0.7",
     "color": "^3.0.0",
     "gatsby": "^2.0.17",
@@ -84,8 +85,6 @@
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
     "instantsearch.css": "^7.0.0",
-    "material-ui": "1.0.0-beta.36",
-    "material-ui-icons": "^1.0.0-beta.17",
     "netlify-cms": "^2.1.2",
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
