--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
-    "@wapps/gatsby-plugin-material-ui": "^1.0.7",
     "color": "^3.0.0",
     "gatsby": "^2.0.17",
     "gatsby-image": "^2.0.13",
@@ -66,7 +65,6 @@
     "gatsby-plugin-favicon": "^3.1.4",
     "gatsby-plugin-feed": "^2.0.7",
     "gatsby-plugin-google-analytics": "^2.0.6",
-    "gatsby-plugin-jss": "^2.0.2",
     "gatsby-plugin-manifest": "^2.0.4",
     "gatsby-plugin-netlify": "^2.0.1",
     "gatsby-plugin-netlify-cms": "^3.0.3",
@@ -85,6 +83,7 @@
     "gatsby-transformer-remark": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.3",
     "instantsearch.css": "^7.0.0",
+    "jss": "^9.8.7",
     "netlify-cms": "^2.1.2",
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
@@ -96,6 +95,7 @@
     "react-headroom": "^2.2.2",
     "react-helmet": "^5.2.0",
     "react-instantsearch": "5.0.0",
+    "react-jss": "^8.6.1",
     "react-lazyload": "^2.3.0",
     "react-loadable": "^5.3.1",
     "react-loadable-visibility": "^2.4.2",
