--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
+    "chunk-text": "^1.0.5",
     "color": "^3.0.0",
     "gatsby": "^2.0.17",
     "gatsby-image": "^2.0.13",
