--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "develop": "gatsby develop",
     "develop-host": "gatsby develop --host 192.168.0.112",
     "build": "gatsby build --prefix-paths",
-    "serve": "gatsby serve",
+    "serve": "gatsby serve --prefix-paths",
     "format-output": "prettier src/**/*.{js,jsx}",
     "format": "prettier --write src/**/*.{js,jsx}",
     "lint-errors": "eslint src/**/*.{js,jsx} --quiet",
