--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "add-article": "node ./add-article.js",
     "develop": "gatsby develop",
     "develop-host": "gatsby develop --host 192.168.0.112",
-    "build": "run-p build:**",
+    "build": "build:**",
     "build:app": "npm run clean && gatsby build --prefix-paths && npm run move",
     "move": "cd public && mkdir tech-blog | mv * tech-blog",
     "serve": "gatsby serve --prefix-paths",
