--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "add-article": "node ./add-article.js",
     "develop": "gatsby develop",
     "develop-host": "gatsby develop --host 192.168.0.112",
-    "build": "build:**",
+    "build": "gatsby build:**",
     "build:app": "npm run clean && gatsby build --prefix-paths && npm run move",
+    "build:lambda": "netlify-lambda build src/lambda",
     "move": "cd public && mkdir tech-blog | mv * tech-blog",
     "serve": "gatsby serve --prefix-paths",
     "format-output": "prettier src/**/*.{js,jsx}",
