--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "add-article": "node ./add-article.js",
     "develop": "gatsby develop",
     "develop-host": "gatsby develop --host 192.168.0.112",
-    "build": "gatsby build --prefix-paths && npm run move",
-    "move": "cd public && mkdir tech-blog | mv * tech-blog",
+    "build": "gatsby build --prefix-paths",
     "serve": "gatsby serve --prefix-paths",
     "format-output": "prettier src/**/*.{js,jsx}",
     "format": "prettier --write src/**/*.{js,jsx}",
