--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,7 +4,7 @@ backend:
   branch: master
 
 media_folder: static/img
-public_folder: tech-blog/img
+public_folder: /img
 
 publish_mode: editorial_workflow
 
